# hackathon2025-316

./: README.md  pyproject.toml  requirements.txt
.classroom/: grade.py
.github/workflows/: ci.yml
data/: README.md
data/public_dev/: dev.csv  train.csv
project/: eval.py  train.py  utils.py
scripts/: get_data.sh
tests/: test_preprocess.py
